syntax = "proto3";

package p2e.v1;
option go_package = "./p2epb";

service P2eService {
  rpc Leaderboard(LeaderboardRequest) returns (stream LeaderboardResponse);
  rpc FightersCount(FightersCountRequest) returns (FightersCountResponse);
  rpc FighterScore(FighterScoreRequest) returns (FighterScoreResponse);
}

message FighterScoreRequest {
  string collection_id = 1;
  string user_id = 2;
}

message FighterScoreResponse {
  UserScore user_score = 1;
}

message FightersCountRequest {
  string collection_id = 1;
}

message FightersCountResponse {
  uint32 count = 1;
}

message LeaderboardRequest {
  string collection_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message UserScore {
  int32 rank = 1;
  int32 snapshot_rank = 2;
  string user_id = 3;
  int64 in_progress_score = 4;
  int64 snapshot_score = 5;
}

message LeaderboardResponse {
  UserScore user_score = 1;
}
